--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - '3000:3000'
     volumes:
       - '.:/app'
+      - '/app/node_modules'
     environment:
       - NODE_ENV=development
     networks:
