--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,12 @@ jobs:
               url = payload.issue.html_url;
               const comment = payload.comment.body;
               message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
-            }
-            if ( context.eventName === 'pull_request_review_comment' && payload.action === 'created') {
-              username = payload.pull_request_review_comment.user.login;
-              title = payload.pull_request.title
-              url = payload.pull_request_review_comment.html_url;
-              const comment = payload.pull_request_review_comment.body;
-              message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
+            } else if (context.eventName === 'pull_request_review_comment' && payload.action === 'created') {
+                username = payload.pull_request_review_comment.user.login;
+                title = payload.pull_request.title;
+                url = payload.pull_request_review_comment.html_url;
+                const comment = payload.pull_request_review_comment.body;
+                message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
             }
             
 
