--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
     types: [opened, assigned, closed]
   issue_comment:
     types: [created]
+  pull_request_review:
+    types: [submitted]
 
 jobs:
   notify:
@@ -26,8 +28,7 @@ jobs:
               }else if (payload.action === 'closed' && payload.pull_request.merged) {
                 title = payload.pull_request.title;
                 message = `\nプルリクエスト[${title}]がマージされました。`;
-              }
-              
+              }  
             if (payload.action === 'opened') {
               username = payload.pull_request.user.login;
               title = payload.pull_request.title;
@@ -36,13 +37,21 @@ jobs:
               const headBranch = payload.pull_request.head.ref;
               message = `**${username}**さんがプルリクエストを送りました。\n[${title}](${url})\n${baseBranch} ⇦ ${headBranch}`;
             } 
-            else if (context.eventName === 'issue_comment') {
+            if (context.eventName === 'issue_comment') {
               username = payload.comment.user.login;
               title = payload.issue.title;
               url = payload.issue.html_url;
               const comment = payload.comment.body;
               message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
+            } 
+            if (payload.action === 'submitted') {
+              username = payload.review.user.login;
+              title = payload.pull_request.title;
+              url = payload.review.html_url;
+              const comment = payload.review.body;
+              message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
             }
+            
 
             await github.request({
               url: mattermostWebhookUrl,
