--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   issue_comment:
     types: [created]
   pull_request_review_comment:
-    types: [edited]
+    types: [created]
 
 jobs:
   notify:
@@ -44,7 +44,7 @@ jobs:
               const comment = payload.comment.body;
               message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
             } 
-            if (payload.action === 'edited'){
+            if (payload.action === 'created'){
              username = payload.comment.user.login;
               title = payload.pull_request.title;
               url = payload.comment.html_url;
