--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
               message = `**${username}**さんが[${title}](${url})にコメントしました。\n${comment}`;
             } 
             if (context.eventName === 'deployment') {
-              title = payload.pull_request.title
-              message = `**[${title}]がマージされ、正常にデプロイされました。`;
+              ref = payload.deployment.ref
+              message = `**ブランチ[${ref}]がマージされ、正常にデプロイされました。`;
             } 
             if (payload.action === 'created'){
              username = payload.comment.user.login;
