--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
-    "tailwindcss": "^3.4.1",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.0",
+    "react-use": "^17.5.0",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
