--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
